Feat:: Add userrepository

--- a/src/CashFlow.Api/appsettings.json
+++ b/src/CashFlow.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port:5432,Database=postgres;Username=postgres;Password=123"
+    "Postgres": "Host=localhost;Database=postgres;Username=postgres;Password=123"
   }
 }
