--- a/src/CashFlow.Api/appsettings.Development.json
+++ b/src/CashFlow.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Database=postgres;Username=postgres;Password=123"
   }
 }
